--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
-PRODUCT_NAME=bible
-PRODUCT_BUNDLE_IDENTIFIER=org.gnit.bible.bible$(TEAM_ID)
+PRODUCT_NAME=Bible
+PRODUCT_BUNDLE_IDENTIFIER=org.gnit.bible.Bible$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
