--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   shared-test:
-    name: Shared Test
+    name: Shared Test Linux
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -34,6 +34,28 @@ jobs:
 
       - name: Run Tests
         run: ./gradlew :shared:allTests
+
+  shared-test-android:
+    name: Shared Test Android
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '24'
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Run Android Tests
+        run: ./gradlew :shared:testReleaseUnitTest
 
   build-linux-cli:
     name: Build Linux CLI
