--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,26 @@ jobs:
             ${{ runner.os }}-konan-        
 
       - name: Run Tests
-        run: ./gradlew :cli:allTest
+        run: ./gradlew :cli:linuxX64Test
+
+  cli-test-jvm:
+    name: CLI Test JVM
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '24'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Run JVM Tests
+        run: ./gradlew :cli:jvmTest
 
   cli-test-macos:
     name: CLI Test macOS
@@ -106,7 +125,7 @@ jobs:
             ${{ runner.os }}-konan-
 
       - name: Run Tests
-        run: ./gradlew :cli:allTest
+        run: ./gradlew :cli:macosArm64Test
 
   compose-app-test:
     name: ComposeApp Test
