Improve logging for LLVM version discovery and update CI job name for macOS CLI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -248,7 +248,7 @@ jobs:
         run: ./gradlew :cli:linkReleaseExecutableLinuxX64
 
   cli-build-macos:
-    name: Build macOS CLI
+    name:  CLI Build macOS
     runs-on: macos-latest
     steps:
       - name: Checkout code
