--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,23 @@ jobs:
       - name: Enable Konan tool logging
         run: echo "KONAN_DEBUG=1" >> "$GITHUB_ENV"
 
+      - name: Debug K/N toolchain
+        run: |
+          set -eux
+          echo "KONAN clang: ${KONAN_CLANG:-<not set>}"
+          /Users/runner/.konan/dependencies/llvm-19-aarch64-macos-essentials-79/bin/clang --version || true
+          xcrun --find clang && xcrun clang --version
+          
+      - name: Force Xcode clang
+        run: |
+          set -eux
+          export KONAN_CLANG=$(xcrun --find clang)
+          export KONAN_LLC=$(dirname "$KONAN_CLANG")/llc
+          export KONAN_OPT=$(dirname "$KONAN_CLANG")/opt
+          echo "KONAN_CLANG=$KONAN_CLANG" >> "$GITHUB_ENV"
+          echo "KONAN_LLC=$KONAN_LLC" >> "$GITHUB_ENV"
+          echo "KONAN_OPT=$KONAN_OPT" >> "$GITHUB_ENV"
+
       - name: Run Tests
         run: KONAN_DEBUG=1 ./gradlew clean :cli:macosArm64Test --debug --stacktrace
 
